# mantra-softtech-demo

./: .gitignore  README.md
client/: package-lock.json  package.json  test-vanta.tsx
client/src/: config.ts  index.css  main.tsx
client/src/components/: App.tsx
client/src/pages/: Home.tsx
server/: .env.example  bot.py  cleanup_knowledge.py  knowledge.md  knowledge_ingest.py  pyproject.toml  tools.py
server/knowledge/: www.mantratec.com_.md  www.mantratec.com_About-Us.md  www.mantratec.com_Clientele.md  www.mantratec.com_Company-Philosophy.md  www.mantratec.com_Company-Profile.md  www.mantratec.com_Insights.md  www.mantratec.com_Research-and-Development.md  www.mantratec.com_Research-and-Development_Innovation-and-Knowledge.md  www.mantratec.com_Research-and-Development_Product-Engineering.md  www.mantratec.com_Solutions.md
server/knowledge/cleaned/: about-us.md  clientele.md  company-philosophy.md  company-profile.md  home.md  insights.md  research-and-development-innovation-and-knowledge.md  research-and-development-product-engineering.md  research-and-development.md  solutions.md
